# md2wechat_skills

./: .env.example  .gitignore  .pypirc.example  CLAUDE.md  ChangeLog.md  PUBLISHING.md  README.md  example_article.md  install.sh  publish_to_pypi.py  pyproject.toml  requirements.lock.txt  test_official_api.py
skills/md2wechat/: SKILL.md
skills/md2wechat/libs/: converter.py  themes.py
skills/md2wechat/scripts/: __init__.py  __main__.py  config.py  image_processor.py  parsers.py  publish.py  publisher.py  wechat_client.py
skills/md2wechat/themes/: academic_gray.yaml  announcement.yaml  ant.yaml  festival.yaml  tech.yaml  wechat.yaml
web/: README.md
web/backend/: main.py  requirements.txt
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: App.vue  api.js
web/frontend/src/components/: ConfigPanel.vue  FileList.vue  FileUploader.vue  UploadResults.vue
