[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "md2wechat"
version = "1.0.0"
description = "Publish Markdown/HTML articles to WeChat Official Account drafts via API"
readme = "README.md"
# License is specified in classifiers below
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "wechatpy",
    "cryptography",
    "Crypto",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/zkkython/md2wechat"
Issues = "https://github.com/zkkython/md2wechat/issues"

[project.scripts]
md2wechat = "skills.md2wechat.scripts.publish:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skills*", "skills.md2wechat*", "skills.md2wechat.scripts*"]

[tool.setuptools]
license-files = []  # Disable automatic license file detection
